# Polymarket-Intelligence

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  place_one_dollar_yes.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_bet_resolution_meta.py  0003_settlement_settings.py  0004_llm_call_metadata.py  0005_analyses_debate_columns.py  0006_bet_fee_wallet_snapshots.py  0007_remove_mode_token_tracking.py  0008_remove_settlement_scheduler_mode_settings.py  0009_pipeline_current_stage.py  0010_scheduler_worker_settings.py  0011_scheduler_run_immediately_on_enable.py  0012_execution_audit_funds_ledger.py  0013_bet_execution_order_reserved.py  0014_risk_poll_scheduler_settings.py  0015_dry_run_bankroll_source.py  0016_setting_descriptions_betting_tif.py  0017_stage2_simple_mode.py  0018_screener_exclude_positions.py  0019_query_perf_indexes.py  0020_settings_stage3_betting_simplify.py  0021_bet_source_copytrading.py  0022_wallet_analyses_history.py  0023_remove_wallet_analyses.py
backend/app/: config.py  database.py  main.py
backend/app/api/: auth.py  bets.py  copy_trading.py  dashboard.py  decisions.py  markets.py  pipeline.py  prompts.py  scheduler.py  settings.py  stats.py  system.py  wallet.py
backend/app/bootstrap/: __init__.py  seed.py
backend/app/clob/: client.py
backend/app/defaults/: __init__.py  prompts_data.py  settings_rows.py
backend/app/domain/: __init__.py
backend/scripts/: backfill_market_end_dates.py
(+98 files in other folders)
